--- a/guides.html
+++ b/guides.html
@@ -100,12 +100,12 @@
   <div class="container">
     <h2>Helpful Tech Guides</h2>
     <ul>
-      <li><a href="#">📹 How to Use Zoom</a></li>
-      <li><a href="#">📧 How to Set Up an Email Account</a></li>
-      <li><a href="#">📱 How to Use a Smartphone</a></li>
-      <li><a href="#">💬 How to Use WhatsApp or iMessage</a></li>
-      <li><a href="#">🌐 Browsing the Web Safely</a></li>
-      <li><a href="#">🛒 How to Shop Online</a></li>
+      <li><a href="JustAskJonathanGuides.pdf#page=1">📹 How to Use Zoom</a></li>
+      <li><a href="JustAskJonathanGuides.pdf#page=2">📧 How to Set Up an Email Account</a></li>
+      <li><a href="JustAskJonathanGuides.pdf#page=3">📱 How to Use a Smartphone</a></li>
+      <li><a href="JustAskJonathanGuides.pdf#page=4">💬 How to Use WhatsApp or iMessage</a></li>
+      <li><a href="JustAskJonathanGuides.pdf#page=5">🌐 Browsing the Web Safely</a></li>
+      <li><a href="JustAskJonathanGuides.pdf#page=6">🛒 How to Shop Online</a></li>
     </ul>
 
     <h3 style="margin-top:40px; color:#006d77;">Request a New Guide</h3>
